--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  path_provider: ^2.0.14
+  permission_handler: ^10.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
